Make sure all filter buttons appear on mobile and remove bookshelf image when not inline anymore

--- a/client/src/styles/cardContainer.css
+++ b/client/src/styles/cardContainer.css
@@ -29,9 +29,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: -6vh;
     position: relative;
-
+    margin-top: -5vh;
     }
 }
 
