--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -77,11 +77,13 @@
     align-items: center;
 }
 
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width : 1000px) {
     .bookshelf_image{
         display: none;
     }
+}
 
+@media only screen and (max-width : 768px) {
     .dashboardContainer{
         background-color: azure;
         height: 100%;
